Closed Bug 1703069 Opened 3 years ago Closed 3 years ago

Fix set_uniform_4fv loading

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: lsalzman, Assigned: lsalzman)

Details

Attachments

(1 file)

This addresses the issue found at https://github.com/servo/webrender/pull/4325

We were just generating nonsensical code for this case. I don't
think this actually gets used anywhere so we never noticed.

Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f9574f86b7da
Fix set_uniform_4fv loading. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: