Bug 1703069 - Fix set_uniform_4fv loading. r=jrmuizel

We were just generating nonsensical code for this case. I don't
think this actually gets used anywhere so we never noticed.

Differential Revision: https://phabricator.services.mozilla.com/D110832